0.4.2 - currently working on
- [#2121] Change: Rename "Oliver's Extension Library" to "One is Enough Library"
- [#2093] Change: Allow creating fake front ends without adding a record to the pages table
- [#1840] Change: Add basic unit tests for templatehelper::createRestrictedImage
- [#1915] Feature: Add a function createFakeFrontEnd to the testing framework
- [#2092] Change: Update the test record icon in seminars and oelib
- [#1705] Feature: Add functionality to create dummy files
- [#2031] Fix: loginFrontEndUser should store the complete FE user record in $GLOBALS['TSFE']->fe_user->user
- [#1894] Change: Only reset the auto_increment value if it is much higher than the highest UID
- [#1986] Change: Only reset the auto_increment value if actually will be different than the current value

0.4.1 - released 2005-05-25
- [#1893] Feature: Allow to use custom "is_dummy" fields per table
- [#1908] Fix: Registration for event not possible if umlauts in fe-user "Name" field
- [#1907] Fix: Oelib's locallang_db.xml is damaged
- [#1904] Fix: Non-sense unit tests in tx_oelib_testingFramework_testcase
- [#1903] Change: Use $this->setExpectedException() instead of try-catch-block in Unit tests
- [#1861] Change: Statically cache the results of hasTableColumnUid and getListOfAllTables
- [#1860] Change: Cache the results of enableFields
- [#1857] Change: markTableAsDirty() now accepts comma-separated list of table names
- [#1870] Fix: createRelation() now throws exception on negative UIDs
- [#1837] Change: Add discardInstance() to the header proxy factory
- [#1797] Feature: Test that the mailer factory can create real mailers
- [#1831] Change: Remove $this->originalConfiguration from the configuration proxy's testcase
- [#1818] Change: Comment and whitespace consistency cleanup
- [#1526] Feature: Use a strategy for setting HTTP headers
- [#1772] Feature: Add constants for frequently used error messages
- [#1457] Change: Use the configuration proxy in the template helper